# corsairmi-mqtt

./: Cargo.toml  README.md  corsairmi.service  flake.nix  module.nix  package.nix
.github/workflows/: ci.yml
src/: main.rs  mqtt.rs  psk.rs
