[package]
name = "corsairmi-mqtt"
version = "0.1.0"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
corsairmi = "1"
ctrlc = "3"
log = { version = "0.4", features = ["release_max_level_info"] }
static_assertions = "1"
systemd-journal-logger = "0.4"
