[package]
name = "corsairmi-mqtt"
description = "Read power from a corsair power supply and publish to a MQTT server"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
corsairmi = "2"
ctrlc = "3"
hex = "0.4"
log = { version = "0.4", features = ["release_max_level_info"] }
openssl = "0.10.42"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.89"
systemd-journal-logger = "0.5"
